Port MMMod 1.0.17 to Minecraft 1.21.6