@@ -2,25 +2,47 @@ package com.mmm.feature;
 
 import com.mmm.config.Configs;
 import com.mmm.config.FeatureToggle;
-
-import fi.dy.masa.malilib.render.RenderUtils;
-import fi.dy.masa.malilib.util.data.Color4f;
+import com.mmm.render.Color4f;
+import net.fabricmc.fabric.api.client.rendering.v1.WorldRenderEvents;
 import net.minecraft.block.BlockState;
 import net.minecraft.client.MinecraftClient;
+import net.minecraft.client.render.BufferBuilder;
+import net.minecraft.client.render.RenderLayer;
+import net.minecraft.client.render.VertexRendering;
+import net.minecraft.client.render.Tessellator;
+import net.minecraft.client.util.math.MatrixStack;
 import net.minecraft.util.hit.BlockHitResult;
 import net.minecraft.util.hit.HitResult;
 import net.minecraft.util.math.BlockPos;
-import org.joml.Matrix4f;
+import net.minecraft.util.math.Box;
+import net.minecraft.util.math.Vec3d;
+import net.minecraft.util.shape.VoxelShape;
 
 public final class BlockEspRenderer
 {
     private static final float RAINBOW_SATURATION = 0.9F;
     private static final float RAINBOW_BRIGHTNESS = 1.0F;
-    private static final float BOX_EXPAND = 0.002F;
-    private static final float OUTLINE_WIDTH = 1.0F;
+    private static final double BOX_EXPAND = 0.002D;
+    private static boolean initialized;
 
     private BlockEspRenderer()
     {
+    }
+
+    public static void initialize()
+    {
+        if (initialized)
+        {
+            return;
+        }
+        initialized = true;
+        WorldRenderEvents.LAST.register(context -> {
+            MatrixStack matrices = context.matrixStack();
+            if (matrices != null)
+            {
+                render(MinecraftClient.getInstance(), matrices, context.camera().getPos());
+            }
+        });
     }
 
     public static void refreshConfig()
@@ -28,9 +50,9 @@ public final class BlockEspRenderer
         Configs.Generic.BLOCK_ESP_HEX_COLOR.setValueFromString(Configs.normalizeBlockEspHexColor(Configs.Generic.BLOCK_ESP_HEX_COLOR.getStringValue()));
     }
 
-    public static void render(MinecraftClient client, Matrix4f positionMatrix, Matrix4f projectionMatrix)
+    private static void render(MinecraftClient client, MatrixStack matrices, Vec3d camera)
     {
-        if (positionMatrix == null || Configs.isBlockEspOutlineOnly())
+        if (!FeatureToggle.MMM_BLOCK_ESP.getBooleanValue() || Configs.isBlockEspOutlineOnly())
         {
             return;
         }
@@ -40,16 +62,46 @@ public final class BlockEspRenderer
         {
             return;
         }
+        BlockState state = client.world.getBlockState(targetPos);
+        VoxelShape shape = state.getOutlineShape(client.world, targetPos);
+        if (shape.isEmpty())
+        {
+            return;
+        }
 
-        Color4f baseColor = getCurrentColor(client);
-        Color4f fillColor = Color4f.fromColor(baseColor, Configs.getBlockEspOpacity());
-        Color4f outlineColor = Color4f.fromColor(baseColor, Math.min(1.0F, Configs.getBlockEspOpacity() + 0.25F));
-        RenderUtils.renderAreaSides(targetPos, targetPos, fillColor, positionMatrix);
-        RenderUtils.renderBlockOutlineOverlapping(targetPos, BOX_EXPAND, OUTLINE_WIDTH, fillColor, outlineColor, outlineColor, positionMatrix);
+        Box local = shape.getBoundingBox();
+        double minX = targetPos.getX() + local.minX - camera.x - BOX_EXPAND;
+        double minY = targetPos.getY() + local.minY - camera.y - BOX_EXPAND;
+        double minZ = targetPos.getZ() + local.minZ - camera.z - BOX_EXPAND;
+        double maxX = targetPos.getX() + local.maxX - camera.x + BOX_EXPAND;
+        double maxY = targetPos.getY() + local.maxY - camera.y + BOX_EXPAND;
+        double maxZ = targetPos.getZ() + local.maxZ - camera.z + BOX_EXPAND;
+        Color4f baseColor = getCurrentColor();
+        Color4f fill = Color4f.fromColor(baseColor, Configs.getBlockEspOpacity());
+        Color4f outline = Color4f.fromColor(baseColor, Math.min(1.0F, Configs.getBlockEspOpacity() + 0.25F));
+
+        matrices.push();
+        try
+        {
+            RenderLayer fillLayer = RenderLayer.getDebugFilledBox();
+            BufferBuilder fillBuffer = Tessellator.getInstance().begin(fillLayer.getDrawMode(), fillLayer.getVertexFormat());
+            VertexRendering.drawFilledBox(matrices, fillBuffer, minX, minY, minZ, maxX, maxY, maxZ,
+                    fill.r, fill.g, fill.b, fill.a);
+            fillLayer.draw(fillBuffer.end());
+
+            RenderLayer lineLayer = RenderLayer.getLines();
+            BufferBuilder lineBuffer = Tessellator.getInstance().begin(lineLayer.getDrawMode(), lineLayer.getVertexFormat());
+            VertexRendering.drawBox(matrices, lineBuffer, minX, minY, minZ, maxX, maxY, maxZ,
+                    outline.r, outline.g, outline.b, outline.a);
+            lineLayer.draw(lineBuffer.end());
+        }
+        finally
+        {
+            matrices.pop();
+        }
     }
 
-    private static Color4f getCurrentColor(MinecraftClient client)
-    {
+    private static Color4f getCurrentColor()    {
         if (Configs.isBlockEspRainbow())
         {
             float cycleLengthMs = Math.max(250.0F, 5000.0F / Math.max(0.1F, Configs.getBlockEspRainbowSpeed()));
@@ -60,12 +112,7 @@ public final class BlockEspRenderer
 
         String hex = Configs.normalizeBlockEspHexColor(Configs.Generic.BLOCK_ESP_HEX_COLOR.getStringValue());
         long parsed = Long.parseLong(hex.substring(1), 16);
-        if (hex.length() == 9)
-        {
-            return Color4f.fromColor((int) parsed);
-        }
-
-        return Color4f.fromColor((int) (0xFF000000L | parsed));
+        return Color4f.fromColor(hex.length() == 9 ? (int) parsed : (int) (0xFF000000L | parsed));
     }
 
     public static boolean shouldReplaceVanillaOutline(MinecraftClient client)
@@ -81,25 +128,22 @@ public final class BlockEspRenderer
         {
             return null;
         }
-
         HitResult hitResult = client.crosshairTarget;
         if (!(hitResult instanceof BlockHitResult blockHitResult) || hitResult.getType() != HitResult.Type.BLOCK)
         {
             return null;
         }
-
         BlockPos targetPos = blockHitResult.getBlockPos();
-        BlockState state = client.world.getBlockState(targetPos);
-        return state.isAir() ? null : targetPos;
+        return client.world.getBlockState(targetPos).isAir() ? null : targetPos;
     }
 
     public static int getCurrentOutlineColor(MinecraftClient client)
     {
-        Color4f color = Color4f.fromColor(getCurrentColor(client), Configs.getBlockEspOpacity());
-        int alpha = Math.max(0, Math.min(255, Math.round(color.a * 255.0F)));
-        int red = Math.max(0, Math.min(255, Math.round(color.r * 255.0F)));
-        int green = Math.max(0, Math.min(255, Math.round(color.g * 255.0F)));
-        int blue = Math.max(0, Math.min(255, Math.round(color.b * 255.0F)));
+        Color4f color = Color4f.fromColor(getCurrentColor(), Configs.getBlockEspOpacity());
+        int alpha = Math.clamp(Math.round(color.a * 255.0F), 0, 255);
+        int red = Math.clamp(Math.round(color.r * 255.0F), 0, 255);
+        int green = Math.clamp(Math.round(color.g * 255.0F), 0, 255);
+        int blue = Math.clamp(Math.round(color.b * 255.0F), 0, 255);
         return (alpha << 24) | (red << 16) | (green << 8) | blue;
     }
 }
